1.0.0
-----

* Make modal dialogs focus first form field on open. (#674)
* Fix display of notifications in navbar. (#749)
* Datasets are no longer locked for editing during exports. (#659)
* PANDA instances now have unique SECRET_KEYS for added security. (#465)
* A password confirmation is now required to edit a user profile. (#677)
* Datasets with aborted imports no longer appear broken. (#705)
* Add refresh page link to dataset import status alerts. (#738)
* Fix search subscription text when not using any full-text query (#747)
* Add delete button for data uploads (also deletes data imported from that upload). (#754)
* Improve appearance of the dashboard. (#765)
* Eliminate default accounts and demo mode. (#769)
* Implement "Welcome to PANDA" setup page. (#752)

0.2.0
-----

* Implement automated search notifications. (#703)
* Add landing pages for exports so they use the login logic. (#711)
* Prompt for metadata during upload. (#710)
* Add a human-readable description to tasks in the admin. (#709)
* Fix longstanding bug where task error notifications may fail. (#700)
* Add row count to import and reindex notification emails. (#697)
* Fix filters so it is possible to search for a zero. (#696)
* Add "Resend activation code" button to User admin pages. (#690)
* Escape dataset names on User pages. (#685)
* Reorganize import errors to be more readable. (#617)
* Don't disable dataset search during import. (#483)
* Update dataset full text when a user's name is changed via the admin. (#351)
* Update dataset full text when a user's name is changed via the API. (#350)
* Handle SMTP connection errors gracefully. (#335)
* Normalize API behavior for Notications. (#237)
* Fix bug where column filters could not be searched alone. (#694)
* Fix bug where column filter ranges would not display. (#695)
* Warn when uploading a file if low on storage space. (#693)
* Add "Abort" link to TaskStatus admin page. (#419)

0.1.4
-----

* Added "Forgot Password?" link. (#536)